.jenkins/deploy/deploy-smee.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smee-client
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: smee-client
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: smee-client
    spec:
      containers:
      - args:
        - --url
        - "https://smee.io/${SMEE_CHANNEL}"
        - --target
        - "http://jenkins:8080/github-webhook/"
        image: quay.io/infrawatch/smee:latest
        imagePullPolicy: Always
        name: smee-client
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
