.jenkins/deploy/service-route.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: ci
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      name: jnlp
      port: 50000
      targetPort: 50000
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jenkins
  namespace: ci
spec:
  to:
    kind: Service
    name: jenkins
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
